Bug 301730 - Ugly half drawn shadows (hardcut) in (qml)windowsswitcher grid
Summary: Ugly half drawn shadows (hardcut) in (qml)windowsswitcher grid
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-tabbox (other bugs)
Version First Reported In: 4.8.80
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 4.9.2
Assignee: KWin default assignee
URL:
Keywords:
: 306259 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-12 13:23 UTC by FabiB
Modified: 2012-09-24 03:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
glxinfo output (12.21 KB, application/octet-stream)
2012-06-12 16:22 UTC, FabiB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2012-06-12 13:23:32 UTC
for 4.9 you can use the qml based windowswitcher "grid" if you use windowshadows it will result (most times) in is some little glitch, that the top+bottom- or right+left-side of the window will not get a shadow. you can see this here: http://i.imgur.com/DVEnV.jpg 
top and bottom are shadowed, left and right not. i think this is based on the windowgeometry because sometimes top+bottom are without shadow

Reproducible: Always

Steps to Reproduce:
1.use windows switcher gridview and compositing shadow
2.open 6 windows or more
3. alt+tab
Actual Results:  
bad drawn shadows on some side of the previews

Expected Results:  
previews should get a beautiful smooth shadow

Qt: 4.8.2
KDE: 4.8.80 (4.8.80)
KWin: 4.8.80 (4.8.80)
Kwin_gles + kwin (both the same result)
xrandr+opengl (both the same result)
Comment 1 Martin Flöser 2012-06-12 15:51:22 UTC
what's your gpu and driver? Please attach an output of glxinfo and if possible run Alt+F2 (KRunner) -> wm console -> print(workspace.supportInformation());
Comment 2 FabiB 2012-06-12 16:22:28 UTC
Created attachment 71768 [details]
glxinfo output

It's a Intel GMA X4500 with current Intel driver 2.19

wm console can not be found. output of kwin --replace is
OpenGL vendor string:                   Tungsten Graphics, Inc
OpenGL renderer string:                 Mesa DRI Intel(R) Q45/Q43 x86/MMX/SSE2
OpenGL version string:                  2.1 Mesa 8.0.2
OpenGL shading language version string: 1.20
Driver:                                 Intel
GPU class:                              i965
OpenGL version:                         2.1
GLSL version:                           1.20
Mesa version:                           8.0.2
X server version:                       1.11.3
Linux kernel version:                   3.4
Direct rendering:                       yes
Requires strict binding:                yes
GLSL shaders:                           yes
Texture NPOT support:                   limited
Comment 3 Thomas Lübking 2012-09-04 17:51:13 UTC
*** Bug 306259 has been marked as a duplicate of this bug. ***
Comment 4 Hugo Pereira Da Costa 2012-09-04 17:56:31 UTC
ALso happens with nouveau:
OpenGL vendor string:                   nouveau
OpenGL renderer string:                 Gallium 0.4 on NVA0
OpenGL version string:                  2.1 Mesa 8.0.2
OpenGL shading language version string: 1.20
Driver:                                 Nouveau
GPU class:                              G80/G90
OpenGL version:                         2.1
GLSL version:                           1.20
Mesa version:                           8.0.2
X server version:                       1.11.4
Linux kernel version:                   3.3.8
Direct rendering:                       yes
Requires strict binding:                yes
GLSL shaders:                           yes
Texture NPOT support:                   yes

And nvidia proprietary
Comment 5 Thomas Lübking 2012-09-05 20:03:16 UTC
https://git.reviewboard.kde.org/r/106336/
Comment 6 Thomas Lübking 2012-09-19 19:09:19 UTC
Git commit 66b171f38b1c4bd68ba07e890c2ce1a30e3a5667 by Thomas Lübking.
Committed on 07/09/2012 at 15:57.
Pushed by luebking into branch 'KDE/4.9'.

Use expandedGeometry to calc thumbnail geometry
REVIEW: 106336
FIXED-IN: 4.9.2

M  +10   -5    kwin/scene.cpp

http://commits.kde.org/kde-workspace/66b171f38b1c4bd68ba07e890c2ce1a30e3a5667