Use expandedGeometry to calc thumbnail geometry

BUG: 301730
REVIEW: 106336
FIXED-IN: 4.9.2